# assigner

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assigner/: app.py  config.py  generator.py  handler.py  provider_repository.py  server.py
k6/: test.js
tests/: test_provider.py
