[tool.poetry]
name = "assigner"
version = "0.1.0"
description = ""
authors = ["Daniel Falk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"
watchfiles = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
